fixed alignment issue in add new words

--- a/public/components/create-new-set.css
+++ b/public/components/create-new-set.css
@@ -41,7 +41,7 @@
   margin-left: -10px;
   padding: 5px;
 }
-@media only screen and (max-width: 220px) {
+@media only screen and (max-width: 248px) {
   #create-new-set {
     font-size: 8px;
   }
@@ -59,7 +59,7 @@
   }
 }
 
-@media only screen and (max-width: 319px) and (min-width: 221px) {
+@media only screen and (max-width: 339px) and (min-width: 248px) {
   #create-new-set {
     font-size: 12px;
   }
@@ -77,7 +77,7 @@
   }
 }
 
-@media only screen and (max-width: 419px) and (min-width: 320px) {
+@media only screen and (max-width: 419px) and (min-width: 340px) {
   #create-new-set input {
     width: 80px;
   }
@@ -91,7 +91,7 @@
     font-size: 18px;
   }
 }
-@media only screen and (max-width: 520px) and (min-width: 420px) {
+@media only screen and (max-width: 545px) and (min-width: 420px) {
   #create-new-set input {
     width: 100px;
   }
@@ -103,12 +103,12 @@
     width: 80px;
   }
 }
-@media only screen and (max-width: 669px) and (min-width: 520px) {
+@media only screen and (max-width: 700px) and (min-width: 546px) {
   #create-new-set input {
     width: 150px;
   }
 }
-@media only screen and (min-width: 670px) {
+@media only screen and (min-width: 701px) {
   #create-new-set input {
     width: 200px;
   }
